--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@mdi/js": "^7.4.47",
     "@nuxt/image": "^1.8.1",
     "@tailwindcss/typography": "^0.5.15",
-    "axios": "^1.7.8",
     "nuxt": "^3.14.1592",
     "vue": "latest",
     "vue-router": "latest"
   },
   "devDependencies": {
+    "@nuxt/content": "^2.13.4",
+    "@nuxt/icon": "^1.9.0",
+    "@nuxtjs/tailwindcss": "^6.12.2",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.16"
