--- a/package.json
+++ b/package.json
@@ -14,14 +14,16 @@
     "@mdi/js": "^7.4.47",
     "@nuxt/image": "^1.8.1",
     "@tailwindcss/typography": "^0.5.15",
+    "dompurify": "^3.2.2",
     "nuxt": "^3.14.1592",
     "vue": "latest",
     "vue-router": "latest"
   },
   "devDependencies": {
     "@nuxt/content": "^2.13.4",
-    "@nuxt/icon": "^1.9.0",
+    "@nuxt/icon": "^1.9.1",
     "@nuxtjs/tailwindcss": "^6.12.2",
+    "@types/dompurify": "^3.0.5",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.16"
