--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@heroicons/vue": "^2.2.0",
+    "@iconify-json/uil": "^1.2.1",
     "@mdi/js": "^7.4.47",
     "@nuxt/image": "^1.8.1",
     "@tailwindcss/typography": "^0.5.15",
@@ -20,6 +21,7 @@
     "vue-router": "latest"
   },
   "devDependencies": {
+    "@iconify-json/mdi": "^1.2.1",
     "@nuxt/content": "^2.13.4",
     "@nuxt/icon": "^1.9.1",
     "@nuxtjs/tailwindcss": "^6.12.2",
