--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 BLOGGER_API_KEY=AIzaSyA2-Ljqejll0cpOEH0xF3eLd2FrYmmoBLg
 BLOGGER_BLOG_ID=3462907902652169422
+KEY_INDEX_NOW=59023f38821842f3a1b79ad61fba65d9
