--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@iconify-json/mdi": "^1.2.1",
     "@nuxt/content": "^2.13.4",
     "@nuxt/icon": "^1.9.1",
+    "@nuxtjs/sitemap": "^7.0.0",
     "@nuxtjs/tailwindcss": "^6.12.2",
     "@types/dompurify": "^3.0.5",
     "autoprefixer": "^10.4.20",
