--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/typography": "^0.5.15",
     "dompurify": "^3.2.2",
     "nuxt": "^3.14.1592",
+    "nuxt-delay-hydration": "^1.3.8",
     "vue": "latest",
     "vue-router": "latest"
   },
@@ -29,6 +30,7 @@
     "@types/dompurify": "^3.0.5",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.16"
+    "tailwindcss": "^3.4.16",
+    "vite-plugin-compression": "^0.5.1"
   }
 }
