--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nuxt/content": "^2.13.4",
     "@nuxtjs/sitemap": "^7.0.0",
     "@types/dompurify": "^3.0.5",
+    "@zadigetvoltaire/nuxt-gtm": "^0.0.13",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.16",
