--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dompurify": "^3.2.2",
     "nuxt": "^3.14.1592",
     "nuxt-delay-hydration": "^1.3.8",
+    "nuxt-gtag": "^3.0.2",
     "vue": "latest",
     "vue-router": "latest"
   },
@@ -26,8 +27,8 @@
     "@iconify-json/mdi": "^1.2.1",
     "@nuxt/content": "^2.13.4",
     "@nuxtjs/sitemap": "^7.0.0",
+    "@pinia/nuxt": "^0.9.0",
     "@types/dompurify": "^3.0.5",
-    "@zadigetvoltaire/nuxt-gtm": "^0.0.13",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.16",
