--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mdi/js": "^7.4.47",
     "@nuxt/image": "^1.8.1",
     "@nuxt/ui": "^2.19.2",
+    "@nuxtjs/robots": "^5.0.1",
     "@tailwindcss/typography": "^0.5.15",
     "dompurify": "^3.2.2",
     "nuxt": "^3.14.1592",
