--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nuxtjs/sitemap": "^7.0.0",
     "@pinia/nuxt": "^0.9.0",
     "@types/dompurify": "^3.0.5",
+    "@types/jsdom": "^21.1.7",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.16",
