--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 BLOGGER_API_KEY=AIzaSyBBZgX-E9yG-jCFmWoU8c8rz4iFTsHWS74
 BLOGGER_BLOG_ID=9014814389136398054
 KEY_INDEX_NOW=59023f38821842f3a1b79ad61fba65d9
+PASS_GOOGLE_MAIL=wdse rthp aqje nfxv
