--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "@nuxt/ui": "^2.19.2",
     "@nuxtjs/robots": "^5.0.1",
     "@tailwindcss/typography": "^0.5.15",
+    "cloudflare": "^3.5.0",
     "dompurify": "^3.2.2",
     "nuxt": "^3.14.1592",
     "nuxt-delay-hydration": "^1.3.8",
     "nuxt-gtag": "^3.0.2",
-    "nuxt-mail": "^5.1.1",
     "vue": "latest",
     "vue-router": "latest"
   },
@@ -33,8 +33,11 @@
     "@types/dompurify": "^3.0.5",
     "@types/jsdom": "^21.1.7",
     "autoprefixer": "^10.4.20",
+    "nitro-cloudflare-dev": "^0.2.1",
+    "nuxt-mail": "^5.1.1",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.16",
-    "vite-plugin-compression": "^0.5.1"
+    "vite-plugin-compression": "^0.5.1",
+    "wrangler": "^3.95.0"
   }
 }
